<resources>
    <string name="app_name">OSDataSetup</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_category">Category</string>
    <string name="menu_sub_category">Sub Category</string>
    <string name="menu_product">Product</string>
    <string name="menu_supplier">Supplier</string>
    <string name="menu_customer">Customer</string>
    <string name="menu_employee">Employee</string>
    <string name="menu_user">User</string>
    <string name="menu_shop_setting">Shop Setting</string>
    <string name="menu_setting">Setting</string>

    <string name="enter_category_name">Enter Category Name</string>
    <string name="save">Save</string>
    <string name="category_saved">Category Saved</string>
    <string name="category_updated">Category Updated</string>
    <string name="delete_confirm">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted">Deleted</string>
    <string name="sort">Sort</string>
    <string name="delete">Delete</string>
</resources>