<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_sub_category"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_sub_category" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_supplier"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_supplier" />
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_customer" />
        <item
            android:id="@+id/nav_employee"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_employee" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_shop_setting"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_shop_setting" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_setting" />
    </group>
</menu>